# WMATA-Pass-Analysis

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  index.cjs  main.py  package-lock.json  package.json  pyproject.toml  svelte.config.js  vite.config.ts
.github/ISSUE_TEMPLATE/: station-mapping-issue.md
.github/workflows/: deploy.yml  docker-image.yml
src/: app.html  typings.d.ts
src/lib/: calculator.ts  gate_station.json  passes.json  rail_fares.json  station_codes.json
src/routes/: +page.svelte
utilities/: README.md  code_to_code_fares.py  station_names_to_codes.py
